--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4954,9 +4954,9 @@ a img {
     right: 0;
     bottom: 0px;
     max-width:100%;
-    max-height:100vh;
+    max-height:100%;
     min-width: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     object-fit: cover;
     z-index: -1;
     display: block;
